# AI-Wellness-Platform

./: .gitignore
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  index.py
backend/app/api/routes/: analytics.py  journal.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py
backend/app/langgraph_system/: graph.py  state.py
backend/app/langgraph_system/nodes/: patterns.py  predictor.py  recommender.py  sentiment.py
backend/app/langgraph_system/tools/: llm.py
backend/app/models/: journal.py  schemas.py
backend/app/services/: analytics_service.py  journal_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/analytics/: AnalyticsCharts.tsx  WellnessScore.tsx
frontend/src/components/dashboard/: MoodChart.tsx
frontend/src/components/journal/: AICompanion.tsx  MoodSlider.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Journal.tsx  Landing.tsx
